<resources>
    <string name="app_name">SDR Radio</string>
    <string name="connect_device">Conectar Dispositivo</string>
    <string name="disconnect_device">Desconectar</string>
    <string name="frequency">Frequência (MHz)</string>
    <string name="sample_rate">Taxa de Amostragem</string>
    <string name="gain">Ganho</string>
    <string name="start_radio">Iniciar Rádio</string>
    <string name="stop_radio">Parar Rádio</string>
    <string name="device_not_found">Dispositivo RTL-SDR não encontrado</string>
    <string name="device_connected">Dispositivo conectado</string>
    <string name="device_disconnected">Dispositivo desconectado</string>
    <string name="permission_required">Permissão USB necessária</string>
    <string name="error_initializing">Erro ao inicializar RTL-SDR</string>
    <string name="radio_started">Rádio iniciado</string>
    <string name="radio_stopped">Rádio parado</string>
    <string name="frequency_range">Faixa de Frequência: 24-1766 MHz</string>
    <string name="auto_gain">Ganho Automático</string>
    <string name="manual_gain">Ganho Manual</string>
    <string name="signal_strength">Força do Sinal</string>
    <string name="spectrum_analyzer">Analisador de Espectro</string>
    <string name="settings">Configurações</string>
    <string name="about">Sobre</string>
</resources> 